--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.affixus.base">
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,13 +12,19 @@
 
         <!-- MainActivity Start -->
         <activity android:name=".activity.MainActivity">
+        </activity>
+        <!-- MainActivity Ends -->
+
+
+        <!-- SimulationRecylerViewWithFilter Start-->
+        <activity android:name=".activity.SimulationRecylerViewWithFilter">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- MainActivity Ends -->
+        <!-- SimulationRecylerViewWithFilter Ends -->
 
 
     </application>
